2006-12-10  Matthias Wimmer  <m@tthias.eu>

    * jsm/modules/mod_vcard.c: using updated identity of user directories
    * jabberd/base/base_importspool.c: importing filespools to SQL
    * jabberd/config.c: same
    * jabberd/lib/expat.c: same
    * jabberd/lib/jabberdlib.h: same
    * jabberd/base/Makefile.am: same
    * jabberd/base/base.c: same
    * jabberd/jabberd.cc: same

2006-12-09  Matthias Wimmer  <m@tthias.eu>

    * jabberd/mio_ssl.c: changed behaviour: using dNSName for cert
	verification also if id-on-xmppAddr is present. (RFC 3920bis)
    * jabberd/lib/xmlnode.c: possibility to add different languages to config
    * jabberd/lib/jabberdlib.h: same
    * jsm/jsm.h: same
    * jsm/authreg.c: same
    * jsm/modules/mod_vcard.c: same
    * jsm/modules/mod_auth_digest.c: same
    * jsm/modules/mod_browse.c: same
    * jsm/modules/mod_disco.c: same
    * jsm/modules/mod_last.c: same
    * jsm/modules/mod_presence.c: same
    * jsm/modules/mod_useridpolicy.c: same
    * jsm/modules/mod_agents.c: same
    * jsm/modules/mod_log.c: same
    * jsm/modules/mod_offline.c: same
    * jsm/modules/mod_auth_crypt.c: same
    * jsm/modules/mod_auth_plain.c: same
    * jsm/modules/mod_register.c: same
    * jsm/modules/mod_version.c: same
    * jsm/modules/mod_admin.c: same
    * jsm/jsm.c: same
    * jsm/deliver.c: same
    * jsm/util.c: same

2006-12-08  Matthias Wimmer  <m@tthias.eu>

    * jsm/modules/mod_privacy.c: sending an id attribute in list pushes

2006-12-05  Matthias Wimmer  <m@tthias.eu>

    * jsm/modules/mod_roster.c: fireing the event that the roster changed
	after roster has been stored, and passing the new roster along
    * jsm/modules/mod_privacy.c: correct privacy list reload after roster
    	changed

2006-12-04  Matthias Wimmer  <m@tthias.eu>

    * jsm/modules/mod_privacy: implement privacy lists (XEP-0016)
    * jsm/jsm.h: same
    * jsm/users.c: same
    * jsm/offline.c: same
    * jsm/server.c: same
    * jsm/sessions.c: same