@@ -1,3 +1,7 @@
+2006-12-11  Matthias Wimmer  <m@tthias.eu>
+
+    * jabberd/lib/xmlnode.c: fix: handle language variants
+
 2006-12-10  Matthias Wimmer  <m@tthias.eu>
 
     * jsm/modules/mod_vcard.c: using updated identity of user directories
